src/test/deca/context/invalid/self/doubleDeclaration2.deca
class A {
    void add(){
        println("ok");
    }

    void add(){
        println("ah");
    }
}